--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,79 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="static/css/main.css">
+		<link href="static/css/main.css" rel="stylesheet">
 	</head>
 	<body>
-		<div class="container">
-			<div class="s3">
+		<div class="boxContainer">
+			<div class="box1">
 				<h3 class="text-muted">S3 bucket list</h3>
-					{% for name_list, date_list in bucket_info %}
-						<p>{{name_list}} {{date_list}}</p>
+				<table class='table'>
+					<tbody>
+						{% for name_list, date_list in bucket_info %}
+						<tr>
+							<td>
+								{{name_list}}
+							</td>
+							<td>
+								{{date_list}}
+							</td>
+						</tr>
 					{% endfor %}
+					</tbody>
+				</table>
 			</div>
-			<div class="ec2">
+			<div class="box1">
 				<h3 class="text-muted">EC2 list</h3>
-					{% for ec2_tag, ec2_state, ec2_size in ec2_info %}
-						<p>{{ec2_tag}} {{ec2_state}} {{ec2_size}}</p>
+				<table class='table'>
+					<tbody>
+						{% for ec2_tag, ec2_state, ec2_size, ec2_pip in ec2_info %}
+						<tr>
+							<td>
+								{{ec2_tag}} 
+							</td>
+							<td>
+								{{ec2_state}}
+							</td>
+							<td>
+								{{ec2_size}}
+							</td>
+							<td>
+								{{ec2_pip}}
+							</td>
+						</tr>
 					{% endfor %}
-
+					</tbody>
+				</table>
 			</div>
+             <div class="box1">
+                 <h3 class="text-muted">RDS list</h3>
+				 <table class='table'>
+					 <tbody>
+                     {% for rds_name, rds_size in rds_info %}
+					 <tr>
+						 <td>
+							 {{rds_name}}
+						 </td>
+						 <td>
+							 {{rds_size}}
+						 </td>
+					 </tr>
+                     {% endfor %}
+					 </tbody>
+				 </table>
+             </div>
+             <div class="box1">
+                 <h3 class="text-muted">VPC list</h3>
+                     {% for ec2_tag, ec2_state, ec2_size in ec2_info %}
+                         <p>{{ec2_tag}} {{ec2_state}} {{ec2_size}}</p>
+                     {% endfor %}
+             </div>
+             <div class="box2">
+                 <h3 class="text-muted">SG list</h3>
+                     {% for ec2_tag, ec2_state, ec2_size in ec2_info %}
+                         <p>{{ec2_tag}} {{ec2_state}} {{ec2_size}}</p>
+                     {% endfor %}
+             </div>
+
+
 		</div>
 	</body>
